--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_IN" />
     
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <link rel="canonical" href="https://shreemathaenterprises.com" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
